<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity"
    android:background="#134E4A">

    <!-- Back Button -->
    <ImageView
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp" />

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="385dp"
        android:layout_height="303dp"
        android:layout_marginTop="-320dp"
        android:src="@drawable/app_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgotPasswordHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="-45dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/inter_18pt_black"
        android:gravity="center"
        android:lineSpacingExtra="5dp"
        android:text="@string/forgotPasswordText"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appLogo" />

    <TextView
        android:id="@+id/resetPasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/sendResetLinkText"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:fontFamily="@font/inter_18pt_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgotPasswordHeader" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="Email"
        android:minHeight="48dp"
        android:textColorHint="#b0ada4"
        android:fontFamily="@font/inter_18pt_semibold"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:padding="10dp"
        android:background="@drawable/edit_box_border"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/resetPasswordText" />



    <Button
        android:id="@+id/resetPasswordButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/inter_18pt_semibold"
        android:padding="14dp"
        android:text="@string/resetLinkButtonText"
        android:textColor="#FFF"
        android:textSize="18sp"
        app:backgroundTint="#14B8A6"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailInput"
        tools:ignore="VisualLintButtonSize" />



    <TextView
        android:id="@+id/backToLoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/backToLoginText"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:fontFamily="@font/inter_18pt_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetPasswordButton" />



</androidx.constraintlayout.widget.ConstraintLayout>